--- a/TicTacToe/Base.lproj/Main.storyboard
+++ b/TicTacToe/Base.lproj/Main.storyboard
@@ -16,33 +16,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0/0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yvk-6G-nM4">
-                                <rect key="frame" x="186" y="103" width="55" height="43"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Player 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8S1-Ry-Aup">
-                                <rect key="frame" x="92" y="113" width="59" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tic-tac-toe-1954446_1920" translatesAutoresizingMaskIntoConstraints="NO" id="iTk-GN-bgN">
-                                <rect key="frame" x="-58" y="243" width="543" height="483"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Preview" translatesAutoresizingMaskIntoConstraints="NO" id="iTk-GN-bgN">
+                                <rect key="frame" x="-18" y="-9" width="465" height="928"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Player 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQh-Ld-V75">
-                                <rect key="frame" x="281" y="113" width="61" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0 : 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yvk-6G-nM4">
+                                <rect key="frame" x="153" y="97" width="108" height="53"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="41"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Player 2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQh-Ld-V75">
+                                <rect key="frame" x="255" y="138" width="149" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="0" translatesAutoresizingMaskIntoConstraints="NO" id="lEU-Yo-tnf">
-                                <rect key="frame" x="20" y="276" width="131" height="122"/>
+                                <rect key="frame" x="0.0" y="257" width="131" height="139"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -50,7 +43,7 @@
                                 </connections>
                             </imageView>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="3" translatesAutoresizingMaskIntoConstraints="NO" id="Jrc-aH-7e1">
-                                <rect key="frame" x="12" y="414" width="131" height="122"/>
+                                <rect key="frame" x="0.0" y="414" width="131" height="136"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -58,7 +51,7 @@
                                 </connections>
                             </imageView>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="5" translatesAutoresizingMaskIntoConstraints="NO" id="leF-qR-cOV">
-                                <rect key="frame" x="281" y="414" width="131" height="122"/>
+                                <rect key="frame" x="292" y="414" width="120" height="136"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -66,7 +59,7 @@
                                 </connections>
                             </imageView>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="8" translatesAutoresizingMaskIntoConstraints="NO" id="u9Z-ch-tRH">
-                                <rect key="frame" x="281" y="558" width="131" height="122"/>
+                                <rect key="frame" x="287" y="565" width="131" height="122"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -74,7 +67,7 @@
                                 </connections>
                             </imageView>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="6" translatesAutoresizingMaskIntoConstraints="NO" id="QvF-Kb-6JS">
-                                <rect key="frame" x="12" y="558" width="131" height="122"/>
+                                <rect key="frame" x="-5" y="565" width="131" height="122"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -82,7 +75,7 @@
                                 </connections>
                             </imageView>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="1" id="3Mm-5X-lhE">
-                                <rect key="frame" x="159" y="280" width="108" height="114"/>
+                                <rect key="frame" x="141" y="257" width="133" height="139"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -90,7 +83,7 @@
                                 </connections>
                             </imageView>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="4" id="atc-b4-dfZ">
-                                <rect key="frame" x="159" y="414" width="108" height="114"/>
+                                <rect key="frame" x="139" y="409" width="137" height="146"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -98,7 +91,7 @@
                                 </connections>
                             </imageView>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="7" id="QAe-ed-Qab">
-                                <rect key="frame" x="159" y="562" width="108" height="114"/>
+                                <rect key="frame" x="134" y="558" width="146" height="136"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -106,21 +99,46 @@
                                 </connections>
                             </imageView>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="2" id="DFx-UM-eTa">
-                                <rect key="frame" x="281" y="276" width="102" height="110"/>
+                                <rect key="frame" x="292" y="255" width="113" height="143"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="3cW-d6-AVY" appends="YES" id="vuh-aJ-Dec"/>
                                 </connections>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="circ" translatesAutoresizingMaskIntoConstraints="NO" id="1pc-xT-2su">
+                                <rect key="frame" x="31" y="57" width="120" height="93"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ccc" translatesAutoresizingMaskIntoConstraints="NO" id="axB-ZZ-dmw">
+                                <rect key="frame" x="269" y="57" width="120" height="93"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Player 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8S1-Ry-Aup">
+                                <rect key="frame" x="6" y="138" width="170" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
-                        <outlet property="item0" destination="lEU-Yo-tnf" id="Sej-2R-IXB"/>
+                        <outlet property="item0" destination="DFx-UM-eTa" id="VoX-fs-601"/>
                         <outlet property="player2Label" destination="oQh-Ld-V75" id="j7J-tw-zu6"/>
                         <outlet property="playerLabel" destination="8S1-Ry-Aup" id="TU4-wn-IV7"/>
+                        <outlet property="pointsLabel" destination="Yvk-6G-nM4" id="4yS-TV-5RZ"/>
+                        <outletCollection property="iv" destination="lEU-Yo-tnf" collectionClass="NSMutableArray" id="muZ-Zl-MFG"/>
+                        <outletCollection property="iv" destination="3Mm-5X-lhE" collectionClass="NSMutableArray" id="9cV-Cd-MNO"/>
+                        <outletCollection property="iv" destination="DFx-UM-eTa" collectionClass="NSMutableArray" id="BCt-zv-BW7"/>
+                        <outletCollection property="iv" destination="leF-qR-cOV" collectionClass="NSMutableArray" id="Ag2-Ax-lj6"/>
+                        <outletCollection property="iv" destination="atc-b4-dfZ" collectionClass="NSMutableArray" id="HJa-kQ-jRK"/>
+                        <outletCollection property="iv" destination="Jrc-aH-7e1" collectionClass="NSMutableArray" id="QQs-Ob-eAg"/>
+                        <outletCollection property="iv" destination="QvF-Kb-6JS" collectionClass="NSMutableArray" id="kl8-9b-d8k"/>
+                        <outletCollection property="iv" destination="QAe-ed-Qab" collectionClass="NSMutableArray" id="c6O-3k-QGa"/>
+                        <outletCollection property="iv" destination="u9Z-ch-tRH" collectionClass="NSMutableArray" id="fmA-MG-xEb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -174,7 +192,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="tic-tac-toe-1954446_1920" width="1920" height="1137"/>
+        <image name="Preview" width="621" height="1104"/>
+        <image name="ccc" width="150" height="180"/>
+        <image name="circ" width="150" height="180"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
